Implementing all the ride services and adding controllers